cabal-version:      2.4
name:               dhall-th-dep
version:            0.1.0.0
author:             Bradley Saul
maintainer:         bsaul@novisci.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Foo
    build-depends:    
          base
        , dhall-th
    hs-source-dirs:   src
    default-language: Haskell2010
